# mc-kasukabe-build

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  PLATFORM.md.tmpl  README.md  pyproject.toml  setup.sh
bridge/: package-lock.json  package.json  server.js
bridge-extension/: block_routes.js
kasukabe/: __main__.py  block_palette.py  bridge_client.py  color_engine.py  command_gen.py  env.py  fidelity.py  foreman.py  models.py  pixel_replica.py  rcon_client.py  replica_inspect.py  verifier.py  video_processor.py
kasukabe/agents/: architect.py  builder.py  inspector.py  planner.py
kasukabe/skills/_partials/: entry_claude.md  entry_codex.md  entry_gemini.md  minecraft_context.md  model_config_claude.md  platform_claude.md  platform_codex.md  platform_gemini.md
kasukabe/skills/_partials/spawn_claude/: spawn_architect.md  spawn_architect_revision.md  spawn_builder.md  (+2 more)
kasukabe/skills/architect/: SKILL.md  SKILL.md.tmpl
kasukabe/skills/builder/: SKILL.md  SKILL.md.tmpl
kasukabe/skills/inspector/: SKILL.md  SKILL.md.tmpl
kasukabe/skills/kasukabe-build/: SKILL.md  SKILL.md.tmpl
kasukabe/skills/kasukabe-extract-frames/: SKILL.md.tmpl
kasukabe/skills/kasukabe-pixel/: SKILL.md.tmpl
kasukabe/skills/planner/: SKILL.md  SKILL.md.tmpl
scripts/: gen_fills.py  gen_skills.py  validate_palette.py
tests/: test_block_palette.py  test_bridge_client.py  test_builder.py  test_color_engine.py  test_command_gen.py  test_fidelity.py  test_gen_skills.py  test_pixel_replica.py  test_smoke.py  test_verifier.py
tests/fixtures/: sharma_ciede2000.csv
(+31 files in other folders)
